fixed content not showing

--- a/less/footer.less
+++ b/less/footer.less
@@ -20,6 +20,6 @@
 }
     
 #footer-sidebar3 {
-    float: left;
+    float: right;
     width: 340px;
 }
